<resources>

    <!-- Manifest.xml -->
    <string name="app_name">BlueTooth</string>
    
    <!-- ActionBar -->
    <string name="action_bluetooth_switch">BlueTooth</string>
    <string name="action_bluetooth_on">ON</string>
    <string name="action_bluetooth_off">OFF</string>
    <string name="action_bluetooth_search">SEARCH FOR DEVICES</string>
    <string name="action_bluetooth_searching">SEARCHING…</string>
    <string name="action_bluetooth_rename">Rename Phone</string>
    <string name="action_bluetooth_timeout">Visibility timeout</string>
    <string name="action_bluetooth_help">Help</string>
    
    <!-- DeviceDetector.java -->
    <string name="bluetooth_is_not_supported">Sorry, your device does not support Bluetooth!</string>
    <string name="bluetooth_is_turning_on">Turning Bluetooth on…</string>
    <string name="bluetooth_is_turning_off">Turning Bluetooth off…</string>
    <string name="bluetooth_is_off">When Bluetooth is turned on, your device can communicate with other nearby Bluetooth devices.</string>
    
    <!-- device_detectr.xml -->
    <string name="device_avator"></string>
    <string name="device_name">Nexus 5</string>
    <string name="device_is_not_visible">Not visible to other Bluetooth devices</string>
    <string name="device_is_visible">Visible to all nearby Bluetooth devices</string>
    <string name="device_available">AVAILABLE DEVICES</string>
    <string name="devices_were_not_found">No bearby Bluetooth devices were found.</string>
    
    <string name="group_my_devices">MY DEVICES</string>
    <string name="group_paired_devices">PAIRED DEVICES</string>
    <string name="group_available_devices">AVAILABLE DEVICES</string>
    
</resources>