<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical" >
    
    <ImageView
        android:id="@+id/deviceAvator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/app_name" />
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            style="@style/title" />
        
        <TextView
            android:id="@+id/deviceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_is_not_visible"
            style="@style/body" />
    </LinearLayout>

</LinearLayout>